Changelog
=========

14.2-dev0 - (unreleased)
---------------------

14.1 - (2019-01-28)
---------------------
* Jenkins: Add sonarqube step
  [avoinea refs #101552]

14.0 - (2019-01-11)
------------------------
* Bug fix: Fix Figure convert for files with space in name
  [avoinea refs #101483]
* Feature: added @@datasets_overview browserView which displays datasets listed
  by legislation
  [ichim-david refs #100700]

13.9 - (2018-12-11)
---------------------
* Change: organisation vocabulary is now reversed sorted in order to have newest
  organisations first
  [ichim-david refs #100699]

13.8 - (2018-12-11)
------------------------
* Change: reportingObligations is now required and introduced a "Not applicable"
  option in case there isn't a ROD to choose
  [ichim-david refs #100699]
* Change: reportingObligations field is now using the OrganisationsWidget
  [ichim-david refs #100699]

13.7 - (2018-12-03)
---------------------
* Bug fix: Fixed reporting obligation field in Data is not showing records
  [avoinea refs #100588]

13.6 - (2018-10-03)
---------------------
* Feature: Added support for Matomo downloads
  [avoinea refs #98864]
* Feature: Added support for Matomo analytics events
  [avoinea refs #98857]

13.5 - (2018-10-02)
---------------------
* Change: Fixed EPS convertor for Pillow 4.3.0
  [szabozo0 refs #98502]

13.4 - (2018-09-03)
---------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on upgrade button
  available for eea.dataservice
  [avoinea refs #98047]
* Change: Drop users' feedback survey on Dataset download
  [avoinea refs #98047]

13.3 - (2018-07-12)
---------------------
* Change: use warning instead of exception for expected behaviour
  [alecghica refs #97089]

13.2 - (2018-06-20)
---------------------
* Change: updated URLs pointing to eea.europa.eu with https://
  [alecghica refs #95849]

13.1 - (2018-03-14)
-------------------
* Change: load jqueryui within dataset_view used by the survey dialog